--- a/index.html
+++ b/index.html
@@ -29,5 +29,32 @@
             <img src="images/hardy.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+                slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p>Name:</p>
+                    <h4>Mary Hardy</h4>
+                </div>
+                <div class="about-info">
+                    <p>Email:</p>
+                    <h4>info@gmail.com</h4>
+                </div>
+                <div class="about-info">
+                    <p>Date of birth:</p>
+                    <h4>11 November 1987</h4>
+                </div>
+                <div class="about-info">
+                    <p>From:</p>
+                    <h4>Los Angeles, USA</h4>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
