--- a/index.html
+++ b/index.html
@@ -55,6 +55,118 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="section-title">About Me</h3>
+            <p class="section-desc desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+                slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3>Vanilla JavaScript</h3>
+                    <p>List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3>React</h3>
+                    <p>List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3>Node.Js</h3>
+                    <p>List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3>MongoDB</h3>
+                    <p>List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor</p>
+                </div>
+            </div>    
+        </section>
+        <section>
+            <h1 class="section-title education">A summary of My Resume</h1>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-title">My Education </h3>
+                    <div class="resume-item">
+                        <h2>Master in Computer Engineering</h2>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2>Master in Computer Engineering</h2>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr><div class="resume-item">
+                        <h2>Master in Computer Engineering</h2>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h2>Sr. Font End Developer</h2>
+                        <h3>Apple Inc / 2020 - Current</h3>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2>Sr. Font End Developer</h2>
+                        <h3>Apple Inc / 2020 - Current</h3>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2>Sr. Font End Developer</h2>
+                        <h3>Apple Inc / 2020 - Current</h3>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="download-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
