--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </section>
         <section>
-            <h3 class="section-title">About Me</h3>
+            <h3 class="section-title">What I do</h3>
             <p class="section-desc desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
                 slick websites that provide real value to the end user. Thousands of clients have procured
                 exceptional resulfs while working with me. Delivering work within time and budget which meets
@@ -168,5 +168,25 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-column">
+            <h3>Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3>Let’s Message me</h3>
+            <form class="contact">
+                <input type="text" placeholder="Your-Name">
+                <input type="email" placeholder="Your-Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input type="submit" value="Submit" class="btn-primary">
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
