--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h1>Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly <br>
                     he. Morning because as to society behaved moments</p>
-                <button class="btn-primary">Download CV</button>   
-                <button class="btn-secondery">Contact</button> 
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>   
+                <button class="btn-secondery"><i class="fa-solid fa-phone"></i> Contact</button> 
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -188,5 +188,6 @@
             </form>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/c9b3f4223a.js" crossorigin="anonymous"></script>
 </body>
 </html>
